# yarn-visibility

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
yarn-visibility/.specify/integrations/: claude.manifest.json  speckit.manifest.json
yarn-visibility/.specify/memory/: constitution.md
yarn-visibility/.specify/workflows/: workflow-registry.json
