[project]
name = "yarn-visibility"
version = "0.1.0"
description = "AI visibility monitoring for yarn brands and knitting pattern designers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing — equivalent to Pest
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",

    # Type checking — equivalent to PHPStan + Psalm
    "mypy>=1.11.0",
    "types-redis>=4.6.0",

    # Linting + formatting — equivalent to PHP CS Fixer + PHPCS
    "ruff>=0.6.0",

    # Architecture rules — equivalent to deptrac
    "import-linter>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yarn_visibility"]

# --- Ruff (linter + formatter) ---
[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["yarn_visibility"]

# --- Mypy (static type checking) ---
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
exclude = ["tests"]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

# --- Import Linter (architecture rules) ---
[tool.importlinter]
root_packages = ["yarn_visibility"]

[[tool.importlinter.contracts]]
name = "Domain must not import from Application or Infrastructure"
type = "forbidden"
source_modules = ["yarn_visibility.*.domain"]
forbidden_modules = [
    "yarn_visibility.*.application",
    "yarn_visibility.*.infrastructure",
]

[[tool.importlinter.contracts]]
name = "Application must not import from Infrastructure"
type = "forbidden"
source_modules = ["yarn_visibility.*.application"]
forbidden_modules = ["yarn_visibility.*.infrastructure"]